// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Slice 3 semantic game-view renderers > renders class selection with numbered choices and provisional values 1`] = `
{
  "numeric": [
    [
      3,
      8,
      15,
      15,
      19,
      5,
      0,
      0,
      8,
      16,
      0,
      16,
      0,
      4,
      0,
      19,
      0,
      12,
      0,
      0,
      0,
      0,
    ],
    [
      27,
      0,
      23,
      1,
      18,
      18,
      9,
      15,
      18,
      0,
      0,
      34,
      0,
      31,
      0,
      31,
      0,
      28,
      0,
      28,
      0,
      0,
    ],
    [
      28,
      0,
      18,
      15,
      7,
      21,
      5,
      0,
      0,
      0,
      0,
      32,
      0,
      29,
      0,
      29,
      0,
      31,
      0,
      31,
      0,
      0,
    ],
    [
      29,
      0,
      23,
      9,
      26,
      1,
      18,
      4,
      0,
      0,
      0,
      30,
      0,
      31,
      0,
      28,
      0,
      29,
      0,
      30,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      16,
      18,
      15,
      22,
      9,
      19,
      9,
      15,
      14,
      1,
      12,
      0,
      22,
      1,
      12,
      21,
      5,
      19,
      0,
      0,
    ],
  ],
  "readable": [
    "CHOOSE··HP·P·D·S·L····",
    "1·WARRIOR··8·5·5·2·2··",
    "2·ROGUE····6·3·3·5·5··",
    "3·WIZARD···4·5·2·3·4··",
    "······················",
    "··PROVISIONAL·VALUES··",
  ],
}
`;

exports[`Slice 3 semantic game-view renderers > renders the non-actionable title presentation exactly 1`] = `
{
  "numeric": [
    [
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      22,
      5,
      19,
      20,
      1,
      17,
      21,
      5,
      19,
      20,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      1,
      0,
      22,
      5,
      19,
      20,
      1,
      2,
      15,
      1,
      18,
      4,
      0,
      18,
      16,
      7,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
      69,
    ],
  ],
  "readable": [
    "wwwwwwwwwwwwwwwwwwwwww",
    "······················",
    "······VESTAQUEST······",
    "···A·VESTABOARD·RPG···",
    "······················",
    "wwwwwwwwwwwwwwwwwwwwww",
  ],
}
`;

exports[`Slice 3 semantic game-view renderers > renders the placeholder room and its numbered choice 1`] = `
{
  "numeric": [
    [
      0,
      0,
      0,
      0,
      0,
      1,
      0,
      4,
      1,
      18,
      11,
      0,
      4,
      15,
      15,
      18,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      3,
      12,
      1,
      19,
      19,
      50,
      0,
      23,
      1,
      18,
      18,
      9,
      15,
      18,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      19,
      15,
      13,
      5,
      20,
      8,
      9,
      14,
      7,
      0,
      23,
      1,
      9,
      20,
      19,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      2,
      5,
      25,
      15,
      14,
      4,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      27,
      0,
      5,
      14,
      20,
      5,
      18,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      16,
      18,
      15,
      22,
      9,
      19,
      9,
      15,
      14,
      1,
      12,
      0,
      18,
      15,
      15,
      13,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  ],
  "readable": [
    "·····A·DARK·DOOR······",
    "CLASS:·WARRIOR········",
    "SOMETHING·WAITS·······",
    "BEYOND················",
    "1·ENTER···············",
    "PROVISIONAL·ROOM······",
  ],
}
`;

exports[`Slice 3 semantic game-view renderers > renders the provisional death with no actionable choice 1`] = `
{
  "numeric": [
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      25,
      15,
      21,
      0,
      4,
      9,
      5,
      4,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      2,
      25,
      0,
      20,
      8,
      5,
      0,
      4,
      1,
      18,
      11,
      14,
      5,
      19,
      19,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      3,
      12,
      1,
      19,
      19,
      50,
      0,
      23,
      1,
      18,
      18,
      9,
      15,
      18,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      20,
      5,
      19,
      20,
      0,
      18,
      15,
      12,
      12,
      50,
      0,
      27,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      14,
      15,
      0,
      18,
      21,
      14,
      0,
      19,
      20,
      1,
      20,
      19,
      0,
      25,
      5,
      20,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      16,
      18,
      15,
      22,
      9,
      19,
      9,
      15,
      14,
      1,
      12,
      0,
      15,
      21,
      20,
      3,
      15,
      13,
      5,
      0,
      0,
      0,
    ],
  ],
  "readable": [
    "·······YOU·DIED·······",
    "BY·THE·DARKNESS·······",
    "CLASS:·WARRIOR········",
    "TEST·ROLL:·1··········",
    "NO·RUN·STATS·YET······",
    "PROVISIONAL·OUTCOME···",
  ],
}
`;

exports[`Slice 3 semantic game-view renderers > renders the provisional victory with no actionable choice 1`] = `
{
  "numeric": [
    [
      0,
      0,
      0,
      0,
      0,
      25,
      15,
      21,
      0,
      5,
      19,
      3,
      1,
      16,
      5,
      4,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      3,
      12,
      1,
      19,
      19,
      50,
      0,
      23,
      1,
      18,
      18,
      9,
      15,
      18,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      20,
      5,
      19,
      20,
      0,
      18,
      15,
      12,
      12,
      50,
      0,
      30,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    [
      22,
      5,
      18,
      20,
      9,
      3,
      1,
      12,
      0,
      19,
      12,
      9,
      3,
      5,
      0,
      15,
      14,
      12,
      25,
      0,
      0,
      0,
    ],
    [
      16,
      18,
      15,
      22,
      9,
      19,
      9,
      15,
      14,
      1,
      12,
      0,
      15,
      21,
      20,
      3,
      15,
      13,
      5,
      0,
      0,
      0,
    ],
  ],
  "readable": [
    "·····YOU·ESCAPED······",
    "CLASS:·WARRIOR········",
    "TEST·ROLL:·4··········",
    "······················",
    "VERTICAL·SLICE·ONLY···",
    "PROVISIONAL·OUTCOME···",
  ],
}
`;
